[gd_scene load_steps=7 format=2]

[ext_resource path="res://shooter/entity/Player.gd" type="Script" id=1]
[ext_resource path="res://shooter/entity/Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/player.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[node name="Player" instance=ExtResource( 2 )]
position = Vector2( 375, 225 )
collision_mask = 6
script = ExtResource( 1 )

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="." index="3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 3 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
